RESOLVED FIXED23599
ResourceError needs to be copyable for use in another thread.
https://bugs.webkit.org/show_bug.cgi?id=23599
Summary ResourceError needs to be copyable for use in another thread.
David Levin
Reported 2009-01-28 13:31:59 PST
Much like the String::copy method.
Attachments
Patch which adds ResourceErrorBase::copy(). (3.06 KB, patch)
2009-01-28 14:58 PST, David Levin
no flags
Small change in ChangeLog text. (3.06 KB, patch)
2009-01-28 15:01 PST, David Levin
ap: review+
David Levin
Comment 1 2009-01-28 14:58:55 PST
Created attachment 27126 [details] Patch which adds ResourceErrorBase::copy(). I need this change for use in making the loader available to the WorkerContext.
David Levin
Comment 2 2009-01-28 15:01:51 PST
Created attachment 27127 [details] Small change in ChangeLog text.
Alexey Proskuryakov
Comment 3 2009-01-29 01:30:12 PST
Comment on attachment 27127 [details] Small change in ChangeLog text. r=me
Alexey Proskuryakov
Comment 4 2009-01-30 00:19:28 PST
Committed revision 40398.
Note You need to log in before you can comment on or make changes to this bug.