2009-01-30  David Levin  <levin@chromium.org>

Reviewed by Alexey Proskuryakov.

        Bug 23599: ResourceError needs to be copyable for use in another thread.
        <https://bugs.webkit.org/show_bug.cgi?id=23599>

        Add ResourceErrorBase::copy method.  (Not yet used.)

        * platform/network/ResourceErrorBase.cpp:
        (WebCore::ResourceErrorBase::copy):
        * platform/network/ResourceErrorBase.h:



git-svn-id: svn://svn.chromium.org/blink/trunk@40398 bbb929c8-8fbe-4397-9dbb-9b2b20218538