third_party/WebKit/WebCore/platform/network/ResourceErrorBase.cpp
@@ -1,6 +1,7 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
  * Copyright (C) 2006 Apple Computer, Inc.  All rights reserved.
+ * Copyright (C) 2009 Google Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -28,6 +29,20 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ResourceError.h"
 
 namespace WebCore {
+
+ResourceError ResourceErrorBase::copy() const
+{
+    lazyInit();
+
+    ResourceError errorCopy;
+    errorCopy.m_domain = m_domain.copy();
+    errorCopy.m_errorCode = m_errorCode;
+    errorCopy.m_failingURL = m_failingURL.copy();
+    errorCopy.m_localizedDescription = m_localizedDescription.copy();
+    errorCopy.m_isNull = m_isNull;
+    errorCopy.m_isCancellation = m_isCancellation;
+    return errorCopy;
+}
 
 void ResourceErrorBase::lazyInit() const
 {
@@ -60,4 +75,4 @@ bool ResourceErrorBase::compare(const ResourceError& a, const ResourceError& b)
     return platformCompare(a, b);
 }
 
-}
+} // namespace WebCore
