third_party/WebKit/WebCore/platform/network/ResourceErrorBase.h
@@ -35,6 +35,9 @@ class ResourceError;
 
 class ResourceErrorBase {
 public:
+    // Makes a deep copy. Useful for when you need to use a ResourceError on another thread.
+    ResourceError copy() const;
+
     bool isNull() const { return m_isNull; }
 
     const String& domain() const { lazyInit(); return m_domain; }
@@ -45,7 +48,7 @@ public:
     void setIsCancellation(bool isCancellation) { m_isCancellation = isCancellation; }
     bool isCancellation() const { return m_isCancellation; }
 
-    static bool compare(const ResourceError& a, const ResourceError& b);
+    static bool compare(const ResourceError&, const ResourceError&);
 
 protected:
     ResourceErrorBase()
@@ -86,4 +89,4 @@ inline bool operator!=(const ResourceError& a, const ResourceError& b) { return 
 
 } // namespace WebCore
 
-#endif // ResourceErrorBase_h_
+#endif // ResourceErrorBase_h
